Update property descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <svg class="w-10 h-10 text-hague-blue" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M8.25 21h7.5M12 3v18" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Flexible Living Spaces</h3>
-                        <p class="text-gray-700 text-sm">4/5 bedrooms, including a versatile ground-floor suite for office or guests.</p>
+                        <p class="text-gray-700 text-sm">4/5 bedrooms, including a versatile ground-floor suite for office, guests or gym.</p>
                     </div>
                     <div class="text-center">
                         <div class="icon-container">
@@ -256,7 +256,7 @@
                             <svg class="w-10 h-10 text-hague-blue" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.697 50.697 0 0112 13.489a50.702 50.702 0 017.74-3.342M6.75 15a.75.75 0 100-1.5.75.75 0 000 1.5z" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Outstanding Education</h3>
-                        <p class="text-gray-700 text-sm">Steps away from an 'Outstanding' primary school, within renowned grammar catchments.</p>
+                        <p class="text-gray-700 text-sm">Steps away from an 'Outstanding' <a href="https://poultonlancelyn.wirral.sch.uk">primary school</a>a, within renowned grammar catchments.</p>
                     </div>
                     <div class="text-center">
                         <div class="icon-container">
