--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barnes Green, Spital | A Refined Family Home</title>
     
+    <!-- Favicon-->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Wirral Home For Sale" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <!-- Primary Meta Tags (for Google Search) -->
     <meta name="description" content="Discover a refined 4/5 bed family home in Spital, Wirral. Perfectly balancing luxury living, outstanding schools (6 safe minute walk), and an effortless commute to Liverpool & Chester.">
     <meta name="author" content="Barnes Green, Spital">
