Fix email link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                             <svg class="w-7 h-7 text-hague-blue flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg>
                             <div class="ml-4">
                                 <h3 class="text-xl font-playfair-display font-semibold text-off-black">Email Enquiries</h3>
-                                <a href="mailto:prenton@bflhomes.com" class="text-off-black hover:text-hague-blue text-lg">prenton@bflhomes.com"</a>
+                                <a href="mailto:prenton@bflhomes.com" class="text-off-black hover:text-hague-blue text-lg">prenton@bflhomes.com</a>
                             </div>
                         </div>
                         
