Fix HTML list formatting and spacing issues

--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
                         <ul class="mt-4 list-disc list-inside text-off-black space-y-1">
                             <li><span class="font-semibold">Liverpool Lime Street:</span> ~22 minutes</li>
                             <li><span class="font-semibold">Chester City Centre:</span> ~25 minutes</li>
-                            <li><span class="font-semibold">Unilever Port Sunlight</span> ~6 minutes</li>
+                            <li><span class="font-semibold">Unilever Port Sunlight:</span> ~6 minutes</li>
                             <li><span class="font-semibold">M53 Motorway:</span> 5 minutes</li>
                             <li><span class="font-semibold">Clatterbridge Hospital:</span> 5-10 minutes</li>
-                            <li><span class="font-semibold">Arrow Park Hospital:</span>15 minutes</li>
-                            <li><span class="font-semibold">St Catherines Health Centre:</span>14 minutes</li>
+                            <li><span class="font-semibold">Arrow Park Hospital:</span> 15 minutes</li>
+                            <li><span class="font-semibold">St Catherines Health Centre:</span> 14 minutes</li>
                         </ul>
                     </div>
                     
@@ -405,20 +405,20 @@
                         </p>
                         <ul class="mt-4 list-disc list-inside text-off-black space-y-1">
                             <li><span class="font-semibold">Fine Dining:</span> 
-                                <ul> 
+                                <ul class="list-disc list-inside ml-4">  
                                     <li>Liverpool's Albert Dock</li>
                                     <li>Chester's city centre.</li>
                                 </ul>
                             </li>
                             <li><span class="font-semibold">Arts & Culture:</span> 
-                                <ul>
+                                <ul class="list-disc list-inside ml-4">
                                     <li>Tate Liverpool</li>
                                     <li>World Museum</li>
                                     <li>Storyhouse Chester</li>
                                 </ul>
                             </li>
                             <li><span class="font-semibold">Local Gems:</span> 
-                                <ul>
+                                <ul class="list-disc list-inside ml-4">
                                     <li>Lady Lever Art Gallery</li>
                                     <li>Port Sunlight Village</li>
                                 </ul>
@@ -437,25 +437,25 @@
                         </p>
                         <ul class="mt-4 list-disc list-inside text-off-black space-y-1">
                             <li><span class="font-semibold">Family Fun:</span> 
-                                <ul>
+                                <ul class="list-disc list-inside ml-4">
                                     <li>Chester Zoo (20 min drive).</li>
                                 </ul>
                             </li>
                             <li><span class="font-semibold">Coastal Walks:</span>
-                                <ul>
+                                <ul class="list-disc list-inside ml-4">
                                     <li>Thurstaston</li>
                                     <li>West Kirby</li>
                                     <li>Parkgate</li>
                                 </ul>
                             </li>
                             <li><span class="font-semibold">Green Spaces:</span>
-                                <ul>
+                                <ul class="list-disc list-inside ml-4">
                                     <li>Wirral Country Park</li>
                                     <li>Royden Park</li>
                                 </ul>
                             </li>
                             <li><span class="font-semibold">Golf:</span> 
-                               <ul>
+                               <ul class="list-disc list-inside ml-4">
                                    <li>Royal Liverpool</li>
                                    <li>Wallasey</li>
                                    <li>Leasowe</li>
