Replace SVG phone icon

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                         </div>
                         
                         <div class="flex items-start">
-                            <svg class="w-7 h-7 text-hague-blue flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.211-.998-.552-1.33l-2.163-2.163a1.125 1.125 0 00-1.59 0l-1.06 1.06c-1.272 1.272-3.63 1.06-5.132-.44-1.502-1.502-1.712-3.86-.44-5.132l1.06-1.06a1.125 1.125 0 000-1.59L9.12 3.552A2.25 2.25 0 007.788 3H6.416A2.25 2.25 0 004.166 5.25v1.5z" /></svg>
+                            <svg class="w-7 h-7 text-hague-blue flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m 18.061808,23.042802 c 2.491898,0.361264 5.407478,-4.491499 3.595552,-5.279803 l -5.442602,-2.36788 C 15.845467,15.234454 16.002994,15.941046 14.555359,17.316201 10.906853,16.789702 8.8025671,12.367843 7.6810384,9.1405206 L 9.9537603,7.7208016 C 10.378379,8.0021802 8.905851,2.1288787 8.4133202,2.0959745 5.3054089,1.9826597 3.0283502,2.8936445 2.4805439,6.2823888 3.6799244,14.80853 8.8909958,21.713259 18.061808,23.042802 Z" /></svg>
                             <div class="ml-4">
                                 <h3 class="text-xl font-playfair-display font-semibold text-off-black">Speak With An Agent</h3>
                                 <a href="tel:+441516089595" class="text-off-black hover:text-hague-blue text-lg">0151 608 9595</a>
