Replace SVG icons with new designs

--- a/index.html
+++ b/index.html
@@ -247,28 +247,28 @@
                 <div class="mt-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
                     <div class="text-center">
                         <div class="icon-container">
-                            <svg class="w-10 h-10 text-hague-blue" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M8.25 21h7.5M12 3v18" /></svg>
+                            <svg class="w-10 h-10 text-hague-blue" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M600-160v-280h280v280H600ZM440-520v-280h440v280H440ZM80-160v-280h440v280H80Zm0-360v-280h280v280H80Zm440-80h280v-120H520v120ZM160-240h280v-120H160v120Zm520 0h120v-120H680v120ZM160-600h120v-120H160v120Zm360 0Zm-80 240Zm240 0ZM280-600Z" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Flexible Living Spaces</h3>
                         <p class="text-gray-700 text-sm">4/5 bedrooms, including a versatile ground-floor suite for office, guests or home gym.</p>
                     </div>
                     <div class="text-center">
                         <div class="icon-container">
-                            <svg class="w-10 h-10 text-hague-blue" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18" /></svg>
+                            <svg class="w-10 h-10 text-hague-blue" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M400-186v-228l56-160q5-11 14.5-18.5T494-600h292q14 0 24 7.5t14 18.5l56 160v228q0 11-7.5 18.5T854-160h-28q-11 0-18.5-7.5T800-186v-34H480v34q0 11-7.5 18.5T454-160h-28q-11 0-18.5-7.5T400-186Zm80-274h320l-28-80H508l-28 80Zm-20 60v120-120Zm60 100q17 0 28.5-11.5T560-340q0-17-11.5-28.5T520-380q-17 0-28.5 11.5T480-340q0 17 11.5 28.5T520-300Zm240 0q17 0 28.5-11.5T800-340q0-17-11.5-28.5T760-380q-17 0-28.5 11.5T720-340q0 17 11.5 28.5T760-300ZM160-160v-40l40-40q-50 0-85-35t-35-85v-320q0-66 59-93t201-27q148 0 204 26t56 94v40h-80v-40H160v240h200v280H160Zm40-160q17 0 28.5-11.5T240-360q0-17-11.5-28.5T200-400q-17 0-28.5 11.5T160-360q0 17 11.5 28.5T200-320Zm260 40h360v-120H460v120Z" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Effortless Connectivity</h3>
                         <p class="text-gray-700 text-sm">A short walk to Spital Station, connecting you to Liverpool and Chester in minutes.</p>
                     </div>
                     <div class="text-center">
                         <div class="icon-container">
-                            <svg class="w-10 h-10 text-hague-blue" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.697 50.697 0 0112 13.489a50.702 50.702 0 017.74-3.342M6.75 15a.75.75 0 100-1.5.75.75 0 000 1.5z" /></svg>
+                            <svg class="w-10 h-10 text-hague-blue" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M 12,19 5,15.2 v -6 L 1,7 12,1 23,7 v 8 H 21 V 8.1 l -2,1.1 v 6 z M 12,10.7 18.85,7 12,3.3 5.15,7 Z m 0,6.025 5,-2.7 V 10.25 L 12,13 7,10.25 v 3.775 z M 12,10.7 Z m 0,2.25 z m 0,0 z" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Outstanding Education</h3>
                         <p class="text-gray-700 text-sm">Steps away from an 'Outstanding' <a href="https://poultonlancelyn.wirral.sch.uk">primary school</a>, within renowned grammar catchments.</p>
                     </div>
                     <div class="text-center">
                         <div class="icon-container">
-                            <svg class="w-10 h-10 text-hague-blue" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" /></svg>
+                            <svg class="w-10 h-10 text-hague-blue" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m 12,20.25 q 3.4375,0 5.809375,-2.40625 Q 20.18125,15.4375 20.25,12 V 3.75 H 12 Q 8.5625,3.81875 6.15625,6.190625 3.75,8.5625 3.75,12 q 0,3.4375 2.40625,5.84375 Q 8.5625,20.25 12,20.25 Z m -1.615625,-2.303125 6.325,-5.6375 q 0.309375,-0.275 0.171875,-0.653125 -0.1375,-0.378125 -0.55,-0.446875 l -4.95,-0.48125 L 14.3375,6.6375 Q 14.440625,6.465625 14.457813,6.3109375 14.475,6.15625 14.3375,6.01875 14.2,5.846875 13.99375,5.8640625 13.7875,5.88125 13.615625,6.01875 L 7.325,11.65625 q -0.309375,0.275 -0.171875,0.653125 0.1375,0.378125 0.55,0.446875 l 4.95,0.48125 L 9.6625,17.328125 Q 9.559375,17.5 9.559375,17.654688 q 0,0.154687 0.1375,0.292187 0.1375,0.1375 0.326563,0.1375 0.189062,0 0.360937,-0.1375 z M 12,23 Q 10.075,23 8.3734375,22.398437 6.671875,21.796875 5.2625,20.696875 L 3.371875,22.5875 Q 3.165625,22.79375 2.9078125,22.896875 2.65,23 2.375,23 1.790625,23 1.3953125,22.604687 1,22.209375 1,21.625 1,21.35 1.103125,21.092188 1.20625,20.834375 1.4125,20.628125 L 3.303125,18.7375 q -1.1,-1.409375 -1.7015625,-3.110937 Q 1,13.925 1,12 1,7.39375 4.196875,4.196875 7.39375,1 12,1 h 11 v 11 q 0,4.60625 -3.196875,7.803125 Q 16.60625,23 12,23 Z m 0,-11 z" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Sustainable Living</h3>
                         <p class="text-gray-700 text-sm">Eco-conscious features: solar panels, heat pump, and battery storage.</p>
