--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                 <!-- Increased height for a grander feel -->
                 <!-- Logo / Site Title -->
                 <div class="flex-shrink-0 flex items-center">
+                    <a href="#home"><img src="/favicon.svg"></a>
                     <a href="#home" class="text-2xl font-playfair-display font-bold text-hague-blue hover:text-hague-blue-dark">Barnes Green</a>
                 </div>
                 
