added an image for education.html

--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
                     
                     <div class="mt-8 md:mt-0">
                         <img 
-                            src="https://placehold.co/800x600/D3D1CB/30435D?text=Inspiring+Education+Environment" 
-                            alt="Image representing inspiring education and community" 
+                            src="/education.jpg" 
+                            alt="Image showing a graduation" 
                             class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
                         >
                     </div>
