--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <meta property="og:title" content="Barnes Green: A Refined 4/5 Bed Family Home in Spital">
     <meta property="og:description" content="Perfect for professional families, balancing luxury living with an effortless commute to Liverpool & Chester.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://wirralhouseforsale.github.io/">
+    <meta property="og:url" content="https://wirralhome.forsale/">
     <meta property="og:image" content="https://assets.reapit.net/vmn/live/pictures/PRE/24/PRE240712_25.jpg">
     <meta property="og:image:alt" content="Elegant front exterior of the Barnes Green family home in Spital">
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://wirralhouseforsale.github.io/">
+    <meta name="twitter:url" content="https://wirralhome.forsale/">
     <meta name="twitter:title" content="Barnes Green: A Refined 4/5 Bed Family Home in Spital">
     <meta name="twitter:description" content="Perfect for professional families, balancing luxury living with an effortless commute to Liverpool & Chester.">
     <meta name="twitter:image" content="https://assets.reapit.net/vmn/live/pictures/PRE/24/PRE240712_25.jpg">
