Add alt text to logo image in index.html
Added alt attribute to logo image for accessibility.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <!-- Increased height for a grander feel -->
                 <!-- Logo / Site Title -->
                 <div class="flex-shrink-0 flex items-center">
-                    <a href="#home"><img src="/favicon.svg"></a>
+                    <a href="#home"><img src="/favicon.svg" alt="Wirral Homes logo"></a>
                     <a href="#home" class="text-2xl font-playfair-display font-bold text-hague-blue hover:text-hague-blue-dark">Barnes Green</a>
                 </div>
                 
