Update text for Poulton Lancelyn Primary School

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <svg class="w-10 h-10 text-hague-blue" fill="currentColor" viewBox="0 0 24 24" stroke="none"><path stroke-linecap="round" stroke-linejoin="round" d="M 12,19 5,15.2 v -6 L 1,7 12,1 23,7 v 8 H 21 V 8.1 l -2,1.1 v 6 z M 12,10.7 18.85,7 12,3.3 5.15,7 Z m 0,6.025 5,-2.7 V 10.25 L 12,13 7,10.25 v 3.775 z M 12,10.7 Z m 0,2.25 z m 0,0 z" /></svg>
                         </div>
                         <h3 class="mt-4 text-xl font-playfair-display font-semibold text-off-black">Outstanding Education</h3>
-                        <p class="text-gray-700 text-sm">Steps away from an 'Outstanding' <a href="https://poultonlancelyn.wirral.sch.uk">primary school</a>, within renowned grammar catchments.</p>
+                        <p class="text-gray-700 text-sm">Steps away from <a href="https://poultonlancelyn.wirral.sch.uk">Poulton Lancelyn</a> primary school, within renowned grammar catchments.</p>
                     </div>
                     <div class="text-center">
                         <div class="icon-container">
@@ -484,7 +484,7 @@
                         <p class="mt-4 text-off-black leading-relaxed">
                             Poulton Lancelyn Primary School<br>
                             Distance: A gentle, safe 2-minute stroll<br>
-                            This 'Outstanding' rated primary school offers an exceptional learning environment, making the school run effortless and enriching.
+                            This primary school offers an exceptional learning environment, making the school run effortless and enriching.
                         </p>
                         
                         <h3 class="mt-8 text-3xl font-playfair-display font-semibold text-hague-blue">Secondary & Grammar Excellence</h3>
