Implement responsive images using picture elements
Replaced img tags with picture elements for responsive images and added multiple source sets for better image loading based on screen size.

--- a/index.html
+++ b/index.html
@@ -208,12 +208,35 @@
         <!-- HOME SECTION -->
         <section id="home" class="relative pt-24 pb-16 md:pt-32 md:pb-24 bg-strong-white overflow-hidden">
             <div class="relative w-full h-[50vh] md:h-[70vh] lg:h-[80vh] overflow-hidden">
-                <img 
-                    src="https://assets.reapit.net/vmn/live/pictures/PRE/24/PRE240712_25.jpg" 
-                    onerror="this.src='https://placehold.co/1920x1080/30435D/F8F8F5?text=Welcome+to+Barnes+Green'"
-                    alt="Elegant front exterior of the Barnes Green family home in Spital" 
-                    class="absolute inset-0 w-full h-full object-cover object-center"
-                >
+                <picture>
+                    <source
+                        media="(min-width: 1281px)"
+                        srcset="img/hero_drawing_1920px.webp"
+                        type="image/webp">
+                    <source
+                        media="(min-width: 641px)"
+                        srcset="img/hero_drawing_1280px.webp"
+                        type="image/webp">
+                    <source
+                        srcset="img/hero_drawing_800px.webp"
+                        type="image/webp">
+                    <source
+                        media="(min-width: 1281px)"
+                        srcset="img/hero_drawing_1920px.jpg"
+                        type="image/jpeg">
+                    <source
+                        media="(min-width: 641px)"
+                        srcset="img/hero_drawing_1280.jpg"
+                        type="image/jpeg">
+                    <img
+                        src="img/hero_drawing_800px.jpg"
+                        alt="Elegant front exterior of the Barnes Green family home in Spital" 
+                        class="absolute inset-0 w-full h-full object-cover object-center"
+                        loading="lazy"
+                        onerror="this.src='https://placehold.co/1920x1080/30435D/F8F8F5?text=Welcome+to+Barnes+Green'">
+                </picture>
+
+
                 <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-black/20 flex flex-col justify-end p-8 md:p-16 text-white">
                     <h1 class="text-4xl md:text-6xl lg:text-7xl font-playfair-display font-bold leading-tight text-shadow-lg max-w-4xl">
                         A Sanctuary of Space & Connectivity.
@@ -285,12 +308,20 @@
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 lg:gap-16 items-center">
                     <div>
-                        <img 
-                            src="https://assets.reapit.net/vmn/live/pictures/PRE/24/PRE240712_11.jpg" 
-                            onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Spacious+Family+Kitchen'"
-                            alt="Modern fitted kitchen diner, the heart of the home" 
-                            class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
-                        >
+                        <picture>
+                            <source srcset="img/Hall_400px.webp" type="image/webp" media="(min-width: 728px) and (max-width: 949px)">
+                            <source srcset="img/Hall_400px.jpg" type="image/jpeg" media="(min-width: 728px) and (max-width: 949px)">
+
+                            <source srcset="img/Hall_800px.webp" type="image/webp">
+                            <source srcset="img/Hall_800px.jpg" type="image/jpeg">
+
+                            <img
+                                src="img/Hall_800px.jpg"
+                                alt="Entrance to the home" 
+                                class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
+                                loading="lazy"
+                                onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Spacious+Entrance'">
+                        </picture>
                     </div>
                     <div class="max-w-xl">
                         <h3 class="text-3xl font-playfair-display font-semibold text-hague-blue">The Heart of the Home: A Space to Connect</h3>
@@ -314,23 +345,41 @@
                         </p>
                     </div>
                     <div class="order-1 md:order-2">
-                        <img 
-                            src="https://assets.reapit.net/vmn/live/pictures/PRE/24/PRE240712_14.jpg" 
-                            onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Versatile+Home+Office'"
-                            alt="Versatile ground floor room; ideal for home office, playroom, guest suite or home gym" 
-                            class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
-                        >
+                        <picture>
+                            <source srcset="img/diningroom_400px.webp" type="image/webp" media="(min-width: 728px) and (max-width: 949px)">
+                            <source srcset="img/diningroom_400px.jpg" type="image/jpeg" media="(min-width: 728px) and (max-width: 949px)">
+
+                            <source srcset="img/diningroom_800px.webp" type="image/webp">
+                            <source srcset="img/diningroom_800px.jpg" type="image/jpeg">
+
+                            <img
+                                src="img/diningroom_800px.jpg"
+                                alt="Spacious dining area" 
+                                class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
+                                loading="lazy"
+                                onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Spacious+Dining+Area'">
+                        </picture>
+
                     </div>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 lg:gap-16 items-center mt-16 md:mt-24">
                     <div>
-                        <img 
-                            src="https://assets.reapit.net/vmn/live/pictures/PRE/24/PRE240712_24.jpg" 
-                            onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Private+Family+Garden'"
-                            alt="Private rear garden with space for family recreation." 
-                            class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
-                        >
+                        <picture>
+                            <source srcset="img/roof_400px.webp" type="image/webp" media="(min-width: 728px) and (max-width: 949px)">
+                            <source srcset="img/roof_400px.jpg" type="image/jpeg" media="(min-width: 728px) and (max-width: 949px)">
+
+                            <source srcset="img/roof_800px.webp" type="image/webp">
+                            <source srcset="img/roof_800px.jpg" type="image/jpeg">
+
+                            <img
+                                src="img/roof_800px.jpg"
+                                alt="Private rear garden with space for family recreation." 
+                                class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
+                                loading="lazy"
+                                onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Private+Family+Garden">
+                        </picture>
+
                     </div>
                     <div class="max-w-xl">
                         <h3 class="text-3xl font-playfair-display font-semibold text-hague-blue">Sustainable Comfort & Outdoor Enjoyment</h3>
@@ -503,11 +552,21 @@
                     </div>
                     
                     <div class="mt-8 md:mt-0">
-                        <img 
-                            src="/education.jpg" 
-                            alt="Image showing a graduation" 
-                            class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
-                        >
+                        <picture>
+                            <source srcset="img/education_400px.webp" type="image/webp" media="(min-width: 728px) and (max-width: 949px)">
+                            <source srcset="img/education_400px.jpg" type="image/jpeg" media="(min-width: 728px) and (max-width: 949px)">
+
+                            <source srcset="img/education_800px.webp" type="image/webp">
+                            <source srcset="img/education_800px.jpg" type="image/jpeg">
+
+                            <img
+                                src="img/education_800px.jpg"
+                                alt="Image showing a graduation" 
+                                class="rounded-xl shadow-lg w-full h-auto object-cover object-center gallery-image"
+                                loading="lazy"
+                                onerror="this.src='https://placehold.co/800x600/7A7470/F8F8F5?text=Excellent+Local+Schools'">
+                        </picture>
+
                     </div>
                 </div>
             </div>
