--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta property="og:url" content="https://wirralhome.forsale/">
     <meta property="og:image" content="https://wirralhome.forsale/img/hero_drawing_1280px.jpg">
     <meta property="og:image:alt" content="Elegant front exterior of the Barnes Green family home in Spital">
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="853" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
